Bug 241909 - LocalSampleBufferDisplayLayer::layerErrorDidChange should let know its client that a failure happened
Summary: LocalSampleBufferDisplayLayer::layerErrorDidChange should let know its client...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebRTC (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: youenn fablet
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-06-23 02:34 PDT by youenn fablet
Modified: 2022-06-23 11:40 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description youenn fablet 2022-06-23 02:34:07 PDT
<rdar://81037177>
Comment 1 youenn fablet 2022-06-23 02:41:44 PDT
Pull request: https://github.com/WebKit/WebKit/pull/1722
Comment 2 EWS 2022-06-23 11:39:21 PDT
Committed 251792@main (50ea1a168415): <https://commits.webkit.org/251792@main>

Reviewed commits have been landed. Closing PR #1722 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-06-23 11:40:13 PDT
<rdar://problem/95794635>