LocalSampleBufferDisplayLayer::layerErrorDidChange should let know its client that a failure happened https://bugs.webkit.org/show_bug.cgi?id=241909

Reviewed by Eric Carlson.

Log both failure and error cases.
In case of error, call client sampleBufferDisplayLayerStatusDidFail.

* Source/WebCore/platform/graphics/avfoundation/objc/LocalSampleBufferDisplayLayer.h:
* Source/WebCore/platform/graphics/avfoundation/objc/LocalSampleBufferDisplayLayer.mm:
(WebCore::LocalSampleBufferDisplayLayer::layerStatusDidChange):
(WebCore::LocalSampleBufferDisplayLayer::layerErrorDidChange):

Canonical link: https://commits.webkit.org/251792@main